--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,5 +41,6 @@ subjects:
 - !lcsh 'Motherless families -- Juvenile fiction'
 - !lcsh 'Families -- Juvenile fiction'
 - !lcsh 'Stepmothers -- Juvenile fiction'
+- GITenberg
 title: Dumps - A Plain Girl
 url: http://www.gutenberg.org/ebooks/43120
